Fix chrome scrollbar for spinning vinyl

--- a/style/style.css
+++ b/style/style.css
@@ -181,7 +181,7 @@ button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 300px;
+  width: 305px;
   right: 0;
   height: 100%;
   z-index: -1;
